@@ -1,4 +1,4 @@
-DIST tabler-1.tar.gz 80730 RMD160 e2dec3d23cbefde4d3428697be36e0bbbf985c12 SHA1 c1615713aa6ed550a155d6e6a910f105ede5f24e SHA256 dbe22561656eabdd4340a2a133eb2c6ce71fc4fc640f1786c90a948f43941134
-EBUILD tabler-1.ebuild 459 RMD160 1332a40bcd32708c44887ed920b651648f041b43 SHA1 35bf1759c93cd0c6edeb13d1b1925b6a5c834ff9 SHA256 119c54cac9702a17d6ba038dd7110f0aadef4363461e8ac165d0c25673fa7c67
-MISC ChangeLog 348 RMD160 b5aea3c0d634b99c8247797f3ebb1a15d093d841 SHA1 3102899e21901eee8cc95333ffa49832e091c666 SHA256 43ff563241cb1a98ff439c1c0911295e834fdfe7b23ee25185e2e3e366dc0751
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+DIST tabler-2.tar.gz 87706 RMD160 66841386cc757c79da155421fb5ffb02d8d2a3aa SHA1 bff34edca1c3cf8bf7ca8a9c53f446716e6203da SHA256 681e15e245db8869ea7ed21177adb93e8734a8076acde0f5b015fb8994761c9a
+EBUILD tabler-2.ebuild 459 RMD160 1332a40bcd32708c44887ed920b651648f041b43 SHA1 35bf1759c93cd0c6edeb13d1b1925b6a5c834ff9 SHA256 119c54cac9702a17d6ba038dd7110f0aadef4363461e8ac165d0c25673fa7c67
+MISC ChangeLog 509 RMD160 3a835010940686f82f98f0a4cc12e2061989900f SHA1 f3d1625121af59a8984e5ecbfa276dad3ed106b4 SHA256 9c15a8c704d07f75fb6152a8639673c9e1bb278931c2786fcc3131928b99f4ec
+MISC metadata.xml 396 RMD160 0f9a04d9ecd92be3855c4072750f89502fd104eb SHA1 833a9ba0226bdc4f90c3dfc986e85305bdfcf730 SHA256 ca9e81817d3a725f379341ae217b90c4a9e832051ab2433dd9716f1b61101c0c
