@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>maintainer-wanted</herd>
+	<maintainer>
+		<email>hncaldwell@csupomona.edu</email>
+		<name>Heath Caldwell</name>
+	</maintainer>
+	<herd>no-herd</herd>
+	<longdescription lang="en">
+		tabler is a program that generates nice looking
+		text tables from delimited data.
+	</longdescription>
 </pkgmetadata>
