@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jul 2008; Heath Caldwell (hncaldwell) <hncaldwell@csupomona.edu>
+  -tabler-1.ebuild, +tabler-2.ebuild, metadata.xml:
+  Version bump and fixed metadata.xml
+
   29 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> tabler-1.ebuild:
   Add IUSE
 
